# Cortex

./: LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  inference_engine.cpp  inference_engine.h  kv_cache.cpp  kv_cache.h  llama_jni.cpp  memory_manager.cpp  memory_manager.h  platform_channel.cpp  platform_channel.h
android/app/src/main/kotlin/com/aarav/cortex/cortex2/: InferenceEnginePlugin.kt  LlamaJNI.kt  MainActivity.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
assets/: supported_models.json
assets/animations/: README.md
ios/Runner/: Info.plist  LlamaBridge.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart  app_navigation.dart
lib/models/: app_models.dart
lib/pages/: chat_page.dart  models_page.dart
lib/providers/: chat_provider.dart  model_provider.dart
lib/services/: inference_engine.dart
lib/shared/theme/: app_theme.dart
lib/shared/widgets/: empty_state.dart  message_bubble.dart  streaming_bubble.dart  typing_indicator.dart
lib/utils/: chat_template.dart
test/: widget_test.dart
